<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:onClick="plus"
        android:text="@string/plus"
        android:id="@+id/button4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="minus"
        android:text="@string/minus"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/Num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number1"
        android:layout_above="@+id/Num2"
        android:layout_alignParentLeft="true" />
    <EditText
        android:id="@+id/Num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number2"
        android:layout_above="@+id/NumOut"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/NumOut"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="bottom"
        android:onClick="multiplication"
        android:text="@string/multiplication" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="left"
        android:onClick="division"
        android:text="@string/division" />
</RelativeLayout>
