<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/Num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/Num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/NumOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:onClick="plus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus" />

    <Button
        android:onClick="minus"
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minus" />

    <Button
        android:onClick="multiplication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplication" />

    <Button
        android:onClick="division"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/division" />

</LinearLayout>
