<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/Num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/NumOut"
        android:textSize="23sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zero" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
    <Button
        android:id="@+id/plus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/plus"
        android:textSize="100dp"
        android:layout_weight="1"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/minus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/minus"
        android:textSize="100dp"
        android:layout_weight="1"
        android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <Button
        android:id="@+id/multiplication"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/multiplication"
        android:textSize="100dp"
        android:layout_weight="1"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/division"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/division"
        android:textSize="100dp"
        android:layout_weight="1"
        android:layout_margin="5dp"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="MainActivity2"/>
</LinearLayout>

</LinearLayout>
